--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
