--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.5.1",
     "expo": "~49.0.13",
@@ -48,7 +49,9 @@
     "react-refresh": "~0.14.0"
   },
   "resolutions": {
-    "react-refresh": "~0.14.0"
+    "react-refresh": "~0.14.0",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   },
   "private": true
 }
